# rust-course

./: .gitignore
lecture-2023-10-03-hello/: Cargo.toml
lecture-2023-10-03-hello/src/: lib.rs  main.rs
lecture-2023-10-05-cli-args/: Cargo.toml
lecture-2023-10-05-cli-args/src/: lib.rs  main.rs
lecture-2023-10-05-cli-args/src/extra/: mod.rs
lecture-2023-10-05-cli-args/src/extra/csv/: mod.rs
lecture-2023-10-05-cli-args/src/extra/palindrome/: mod.rs
lecture-2023-10-05-cli-args/src/text_processing/: mod.rs  single_shot.rs
lecture-2023-10-05-cli-args/src/types/action/: mod.rs
lecture-2023-10-31-xchat/: Cargo.toml  README.md  docker-compose.yaml  lib.rs  prometheus.yaml
lecture-2023-10-31-xchat/.cargo/: config.toml
lecture-2023-10-31-xchat/client/: Cargo.toml
lecture-2023-10-31-xchat/client/src/: commands.rs  lib.rs  main.rs
lecture-2023-10-31-xchat/server/: Cargo.toml
lecture-2023-10-31-xchat/server/migrations/: 20231206085908_initial.sql  20231210171047_initial_users.sql
lecture-2023-10-31-xchat/server/src/: db_queries.rs  error.rs  lib.rs  main.rs  web.rs  web_prometheus.rs
lecture-2023-10-31-xchat/shared/: Cargo.toml
lecture-2023-10-31-xchat/shared/src/: lib.rs  message.rs  panic.rs  timestamp.rs
