[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
chrono = "0.4.31"
color-eyre = "0.6.2"
flume = "0.11.0"
image = "0.24.7"
shared = { path = "../shared" }
tokio = { version = "1.34.0", features = ["net", "full"] }
