[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
futures = "0.3.29"
rayon = "1.8.0"
shared = { path = "../shared" }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
