[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
axum = "0.7.2"
chrono = "0.4.31"
futures = "0.3.29"
lazy_static = "1.4.0"
prometheus = "0.13.3"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
shared = { path = "../shared" }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
